tabs spacing issue fixed

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -78,8 +78,8 @@
       margin-bottom: 16px;
 
       .default-categories {
-        height: 78px;
-        width: 78px;
+        height: 88px;
+        width: 88px;
         display: flex;
         align-items: center;
         justify-content: center;
